--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,38 @@
+*{
+    box-sizing: border-box;
+}
 body, html {
+    overflow-y:hidden;
+    overflow-x:hidden;
     margin: 0;
     padding: 0;
     width: 1920px;
     height: 480px;
 }
 
-.background {
+.my-background {
     width: 100%;
     height: 100%;
-    background: -webkit-linear-gradient(225deg, #245ceb, #1B2751);
+    background: #222;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.container {
+.my-container {
     display: flex;
     align-items: center;
     width: 100%;
     height: 100%;
     padding: 10px;
+    box-sizing: border-box;
 }
 
-.square, .rectangle {
+.my-square, .my-rectangle {
     margin: 10px;
     border-radius: 15px;
+    box-sizing: border-box;
 }
-.square {
+.my-square {
     margin: 10px;
     border-radius: 15px;
     padding: 20px;
@@ -37,22 +43,22 @@ body, html {
     text-align: center; /* 文字居中 */
 }
 
-.square p {
+.my-square p {
     margin: 10px 0; /* 调整段落之间的间距 */
     font-size: 18px; /* 设置字体大小 */
     line-height: 1.5; /* 设置行高 */
 }
 
-.square p:nth-child(odd) {
+.my-square p:nth-child(odd) {
     font-weight: bold; /* 奇数段落加粗 */
 }
-.square {
+.my-square {
     height: 440px;
     width: 440px;
     background-color: #333;
 }
 
-.rectangle {
+.my-rectangle {
     height: 440px;
     width: 960px;
     background-color: #444;
