--- a/templates/index.html
+++ b/templates/index.html
@@ -5,37 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link href="/static/QWeather-Icons-1.6.0/font/qweather-icons.css" rel="stylesheet">
+    <link href="/static/css/style-zh.css" rel="stylesheet">
     <script src="/static/js/lunar.js"></script>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <div class="background">
-        <div class="container">
-            <div class="square">
-                <p title="现在时间" id="current-time"></p><br>
-                <p title="现在日期" id="current-date"></p><br>
-                <p title="现在星期" id="current-weekday"></p><br>
-                <p title="现在阴历" id="current-lunar"></p><br>
+<div class="my_background {{ data.current_weather_bg_class }}" style="border-radius:0">
+    <div class="my-container">
+        <div class="my-square">
+            <p title="现在时间" id="current-time"></p><br>
+            <p title="现在日期" id="current-date"></p><br>
+            <p title="现在星期" id="current-weekday"></p><br>
+            <p title="现在阴历" id="current-lunar"></p><br>
+        </div>
+        <div class="my-square">
+            <div id="weather-icon" style="display: block;width: 100px;height: 100px">
+                <p title="今日天气图标"><i class="qi-{{ data.now_icon }}"></i></p>
             </div>
-            <div class="square">
-                <div id="weather-icon" style="display: block;width: 100px;height: 100px">
-                    <p title="今日天气图标"><i class="qi-{{ data.now_icon }}"></i></p>
-                </div>
-                <div id="current-weather">
-                    <p title="当前天气描述">{{ data.now_weather }}</p><br>
-                </div>
-                <div id="today-temp">
-                    <p title="当天最低温度">{{ data.today_lowest_temp }}</p><br>
-                    <p title="当前气温">{{ data.now_temp }}</p><br>
-                    <p title="当天最高温度">{{ data.today_highest_temp }}</p><br>
-                </div>
+            <div id="current-weather">
+                <p title="当前天气描述">{{ data.now_weather }}</p><br>
             </div>
-            <div class="rectangle">
-
-
+            <div id="today-temp">
+                <p title="当天最低温度">{{ data.today_lowest_temp }}</p><br>
+                <p title="当前气温">{{ data.now_temp }}</p><br>
+                <p title="当天最高温度">{{ data.today_highest_temp }}</p><br>
             </div>
         </div>
+        <div class="my-rectangle">
+
+
+        </div>
     </div>
+</div>
 <script>
     // 更新当前时间
     function updateCurrentTime() {
@@ -67,20 +68,21 @@
 
     // 获取当前农历
     var lunarString = Solar.fromYmd(new Date().getFullYear(), new Date().getMonth() + 1, new Date().getDate()).getLunar();
-    function getHoursArr(cHour)
-    {
+
+    function getHoursArr(cHour) {
         var hoursArr = [cHour, cHour + 2, cHour + 4, cHour + 6, cHour + 8, cHour + 10, cHour + 12];
-        var processedHoursArr = hoursArr.map(function(value) {
-        // 如果元素大于 24，则减去 24
-             if (value >= 24) {
+        var processedHoursArr = hoursArr.map(function (value) {
+            // 如果元素大于 24，则减去 24
+            if (value >= 24) {
                 return value - 24;
-             }
+            }
             // 否则保持不变
             return value;
         });
         return processedHoursArr;
 
     }
+
     var currentHourArr = getHoursArr(new Date().getHours());
     //获取当前整点时间
     // 显示当前日期、星期几和农历
