--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="my_background {{ data.current_weather_bg_class }}" style="border-radius:0">
-    <div class="my-container">
-        <div class="my-square">
+    <div class="container">
+        <div class="square">
             <p title="现在时间" id="current-time"></p>
             <p title="现在日期" id="current-date">
                 <div id="current-date"></div>
@@ -21,7 +21,7 @@
             <p title="现在星期" id="current-weekday"></p>
             <p title="现在阴历" id="current-lunar"></p>
         </div>
-        <div class="my-square">
+        <div class="square">
             <div class="weather-icon">
                 <p title="今日天气图标"><i class="qi-{{ data.now_icon }}" style="font-size:130px"></i></p>
             </div>
@@ -34,7 +34,7 @@
                 <p title="当天最高温度">{{ data.today_highest_temp }}</p><br>
             </div>
         </div>
-        <div class="my-rectangle">
+        <div class="rectangle">
 
 
         </div>
