--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <script src="/static/js/lunar.js"></script>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
-<body>
+<body class="theme--{{ data.theme }}">
 <div class="my_background {{ data.current_weather_bg_class }}" style="border-radius:0">
     <div class="container">
         <div class="square">
