--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,8 @@ body, html {
     height: 100%;
     padding: 10px;
     box-sizing: border-box;
+    background-position: left top;
+    background-repeat: no-repeat;
 }
 
 .layout {
